--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,3 @@
-<header fxLayout="row" fxLayoutAlign="space-between end">
-    <div class="title">
-        <span class="first-name">{{profile.firstName}}</span>
-        <span class="last-name">{{profile.lastName}}</span>
-    </div>
-    <nav>
-        <ul fxLayout="row" id="nav">
-            <li>
-                <a>Home</a>
-            </li>
-            <li>
-                <a>About</a>
-            </li>
-        </ul>
-    </nav>
+<header id="header">
+    <as-header-nav></as-header-nav>
 </header>
-
-<div fxLayout="row" fxLayoutAlign="center center">Under construction...</div>
