--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -1,18 +1,18 @@
 // Theme colors
 
-$theme-primary: #787e62;
-$theme-primary-light: #b1bc91;
-$theme-primary-dark: #282a1c;
+$theme-green: #787e62;
+$theme-green-light: #b1bc91;
+$theme-green-dark: #282a1c;
 
-$theme-accent: #404240;
-$theme-accent-dark: #1E1F1D;
-$theme-accent-light: #717571;
+$theme-dark: #404240;
+$theme-dark-dark: #1E1F1D;
+$theme-dark-light: #717571;
 
-$theme-warn: #BCC2BB;
-$theme-warn-dark: #979C96;
-$theme-warn-light: #E1E8DF;
+$theme-light: #BCC2BB;
+$theme-light-dark: #979C96;
+$theme-light-light: #E1E8DF;
 
-/* $theme-primary: #22B49C;
+$theme-primary: #22B49C;
 $theme-primary-dark: #187D6C;
 $theme-primary-light: #30FCDB;
 
@@ -24,7 +24,7 @@ $theme-warn: #BD4A38;
 $theme-warn-dark: #7D3125;
 $theme-warn-light: #E77173;
 
-$theme-foreground: #2E424E; */
+$theme-foreground: #2E424E;
 
 $theme-foreground: #0A0A0A;
 $theme-background: #ffffff;
