--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import './css-reset';
 @import './theme';
 @import './font';
 @import './transition';
@@ -6,8 +7,7 @@
 @import './page-layout';
 @import './padding';
 
-@import './font-circular-std';
-@import './font-dk-cinnabar-brush';
+@import './font-pt-mono';
 
 @import './color-classes';
 @import './base-rules';
