--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,11 +1,3 @@
-<div class="photos" fxLayout="row">
-    <div
-        class="photo-container"
-        *ngFor="let photo of photos">
-        <div
-            [ngStyle]="photoStyle(photo)"
-            class="photo">
-            <div class="gradient"></div>
-        </div>
-    </div>
-</div>
+<as-media-photo></as-media-photo>
+<as-media-digital></as-media-digital>
+<as-media-svg></as-media-svg>
