--- a/src/sass/_base-rules.scss
+++ b/src/sass/_base-rules.scss
@@ -1,8 +1,12 @@
 html, body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
     padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'PT Mono', 'Courier New', Courier, monospace;
 }
