--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,6 @@
 
 header {
     padding: 0.5rem;
-    border-bottom: 1px solid $theme-accent-dark;
+    border-bottom: 1px solid $theme-dark;
     margin-bottom: 1px;
 }
