--- a/src/app/footer/footer-links/footer-links.component.scss
+++ b/src/app/footer/footer-links/footer-links.component.scss
@@ -1,1 +1,25 @@
 @import '~sass/styles.scss';
+
+ul {
+    padding: 0.25em 0;
+    margin: 0;
+}
+
+li {
+    padding: 0;
+    list-style: none;
+}
+
+a {
+    cursor: pointer;
+    display: block;
+    padding: 8px 2px;
+    margin: 0 10px;
+    color: inherit;
+    text-decoration: none;
+    outline: none;
+
+    &:hover {
+        color: $theme-primary;
+    }
+}
