--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,8 @@
-<div id="footer">
-    <as-footer-links></as-footer-links>
-</div>
+<footer id="footer">
+    <div
+        fxLayout="row" 
+        fxLayoutAlign="space-around start">
+        <as-footer-copyright></as-footer-copyright>
+        <as-footer-links></as-footer-links>
+    </div>
+</footer>
