--- a/src/app/media/media-svg/media-svg.component.scss
+++ b/src/app/media/media-svg/media-svg.component.scss
@@ -1,1 +1,29 @@
 @import '~sass/styles.scss';
+
+.images {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 4px;
+}
+
+.image-container {
+    margin: 4px;
+    overflow: hidden;
+}
+
+.image {
+    cursor: pointer;
+    width: 20rem;
+    height: 15rem;
+    background-position: 50% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.image {
+    transition: transform $transition-time linear;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+}
