Added media routes

--- a/src/app/header/header-nav/header-nav.component.html
+++ b/src/app/header/header-nav/header-nav.component.html
@@ -9,7 +9,7 @@
                 <a
                     routerLink="/home"
                     routerLinkActive="active"
-                    [routerLinkActiveOptions]="{ exact: 'true' }">Home</a>
+                    [routerLinkActiveOptions]="{ match: ['/home'] }">Home</a>
             </li>
             <li>
                 <a
