Added API endpoints and more data

--- a/src/app/about/about-personal/about-personal.component.html
+++ b/src/app/about/about-personal/about-personal.component.html
@@ -1,14 +1,14 @@
-<as-profile-template>
+<as-profile-template *ngIf="person">
 
     <as-profile-photo>
         <img
             alt="Photo"
-            src="https://scontent-frx5-1.cdninstagram.com/vp/d450901ee1219d435013104c715b0a4f/5BA6CB01/t51.2885-19/s150x150/27879933_173486346762767_1643623188917125120_n.jpg" />
+            [src]="person.photo" />
     </as-profile-photo>
 
     <as-profile-title>
-        <span class="first-name">{{profile.firstName}}</span>
-        <span class="last-name">{{profile.lastName}}</span>
+        <span class="first-name">{{person.firstName}}</span>
+        <span class="last-name">{{person.lastName}}</span>
     </as-profile-title>
 
     <as-profile-details>
@@ -18,14 +18,14 @@
                     <div fxLayout="row" fxLayoutAlign="start center">
                         <mat-icon
                             aria-label="Work title"
-                            svgIcon="as_work"></mat-icon> <span>{{profile.workTitle}}</span>
+                            svgIcon="as_work"></mat-icon> <span>{{person.workTitle}}</span>
                     </div>
                 </div>
                 <div class="location detail-item">
                     <div fxLayout="row" fxLayoutAlign="start center">
                         <mat-icon
                             aria-label="Location"
-                            svgIcon="as_location"></mat-icon> <span>{{profile.location}}</span>
+                            svgIcon="as_location"></mat-icon> <span>{{person.location}}</span>
                     </div>
                 </div>
             </div>
@@ -34,14 +34,14 @@
                     <div fxLayout="row" fxLayoutAlign="start center">
                         <mat-icon
                             aria-label="Place of birth"
-                            svgIcon="as_place_of_birth"></mat-icon> <span>{{profile.placeOfBirth}}</span>
+                            svgIcon="as_place_of_birth"></mat-icon> <span>{{person.placeOfBirth}}</span>
                     </div>
                 </div>
                 <div class="birthday detail-item">
                     <div fxLayout="row" fxLayoutAlign="start center">
                         <mat-icon
                             aria-label="Birthday"
-                            svgIcon="as_birthday"></mat-icon> <span>{{profile.dateOfBirth | date:'mediumDate'}}</span>
+                            svgIcon="as_birthday"></mat-icon> <span>{{person.dateOfBirth | date:'mediumDate'}}</span>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
     <as-profile-skills>
         <div class="technical-skills" fxLayout="row">
             <div
-                *ngFor="let skill of profile.skills"
+                *ngFor="let skill of person.skills"
                 class="skill">
                 {{ skill }}
             </div>
