--- a/src/app/header/header-nav/header-nav.component.html
+++ b/src/app/header/header-nav/header-nav.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="space-between end">
     <div class="title">
-        <span class="first-name">{{profile.firstName}}</span>
-        <span class="last-name">{{profile.lastName}}</span>
+        <span class="first-name">{{firstName}}</span>
+        <span class="last-name">{{lastName}}</span>
     </div>
     <nav>
         <ul fxLayout="row" id="nav">
@@ -10,6 +10,12 @@
                     routerLink="/home"
                     routerLinkActive="active"
                     [routerLinkActiveOptions]="{ match: ['/home'] }">Home</a>
+            </li>
+            <li>
+                <a
+                    routerLink="/project"
+                    routerLinkActive="active"
+                    [routerLinkActiveOptions]="{ match: ['/project'] }">Projects</a>
             </li>
             <li>
                 <a
