Added more to project section

--- a/src/app/about/about-work/about-work.component.html
+++ b/src/app/about/about-work/about-work.component.html
@@ -61,9 +61,9 @@
     <as-profile-skills>
         <div class="technical-skills" fxLayout="row">
             <div
-                *ngFor="let skill of job.responsibilities"
+                *ngFor="let task of job.responsibilities"
                 class="skill">
-                {{ skill }}
+                {{ task }}
             </div>
         </div>
     </as-profile-skills>
