--- a/src/app/media/media-vector/media-vector.component.html
+++ b/src/app/media/media-vector/media-vector.component.html
@@ -1,4 +1,4 @@
-<div class="vectors" fxLayout="row">
+<div class="vectors" fxLayout="row" fxLayoutAlign="center center">
     <div
         class="vector-container"
         *ngFor="let vector of vectors">
