--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -6,6 +6,12 @@
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{exact: true}">Overview</a>
         </li>
+        <li>
+            <a
+                [routerLink]="['screens']"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{exact: true}">Screenshots</a>
+        </li>
     </ul>
     <router-outlet></router-outlet>
 </div>
