--- a/src/app/footer/footer-links/footer-links.component.html
+++ b/src/app/footer/footer-links/footer-links.component.html
@@ -1,8 +1,8 @@
 <ul fxLayout="column">
     <li>
-        <a href="/">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/shortalla">LinkedIn</a>
     </li>
     <li>
-        <a href="/">GitHub</a>
+        <a href="https://github.com/shortalla">GitHub</a>
     </li>
 </ul>
