--- a/src/app/project/project-overview/project-overview.component.scss
+++ b/src/app/project/project-overview/project-overview.component.scss
@@ -1,11 +1,53 @@
 @import '~sass/styles.scss';
-.box {
-    margin: 0.5rem;
-    padding: 0.5rem;
-    background-color: $theme-accent-dark;
-    border-radius: 4px;
 
-    > * {
-        padding: 0.5rem;
+as-profile-photo {
+    img {
+        border-radius: 50%;
+        height: 100%;
+        width: 100%;
     }
+}
+
+as-profile-title {
+    font-size: $large-font-size-xs;
+
+    .first-name {
+        color: $theme-dark-dark;
+        font-weight: $font-weight-normal;
+    }
+
+    .last-name {
+        color: $theme-light;
+        font-weight: $font-weight-lightest;
+    }
+}
+
+as-profile-details {
+    mat-icon {
+        margin-right: 1em;
+    }
+
+    .detail-items {
+        flex-wrap: wrap;
+    }
+
+    .detail-item {
+        padding: 0.25em;
+        font-size: $font-size-xl;
+        margin-right: 1em;
+    }
+}
+
+p {
+    line-height: 1.4;
+    padding: 0.5rem;
+}
+
+.technical-skills {
+    flex-wrap: wrap;
+}
+
+.skill {
+    width: 12.5rem;
+    padding: 0.4rem 1.6rem;
 }
