--- a/src/app/media/media-digital/media-digital.component.html
+++ b/src/app/media/media-digital/media-digital.component.html
@@ -1,3 +1,6 @@
 <as-image-list
-    [images]="images">
+    [images]="images"
+    [hasBorder]="true"
+    [hasGradient]="true"
+    [orientation]="orientation">
 </as-image-list>
