--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,5 +1,5 @@
 <div id="project">
-    <ul fxLayout="row" fxLayoutAlign="center center" id="nav">
+    <!-- <ul fxLayout="row" fxLayoutAlign="center center" id="nav">
         <li>
             <a
                 [routerLink]="['overview']"
@@ -13,5 +13,7 @@
                 [routerLinkActiveOptions]="{exact: true}">Screenshots</a>
         </li>
     </ul>
-    <router-outlet></router-outlet>
+    <router-outlet></router-outlet> -->
+    <as-project-overview></as-project-overview>
+    <as-project-screens></as-project-screens>
 </div>
