--- a/src/app/about/about-personal/about-personal.component.scss
+++ b/src/app/about/about-personal/about-personal.component.scss
@@ -1,11 +1,8 @@
 @import '~sass/styles.scss';
 
-as-profile-photo {
-    img {
-        border-radius: 50%;
-        height: 100%;
-        width: 100%;
-    }
+.wrapper {
+    max-width: 920px;
+    margin: auto;
 }
 
 as-profile-title {
