--- a/src/app/about/about-work/about-work.component.html
+++ b/src/app/about/about-work/about-work.component.html
@@ -1,69 +1,68 @@
 <div
-    class="wrapper"
-    *ngIf="job">
-    <as-profile-template [image]="job.photo" >
-        <as-profile-title>
-            <span class="last-name">{{job.company}}</span>
-        </as-profile-title>
-        <as-profile-details>
-            <div class="detail-items" fxLayout="row" fxLayout="space-between center">
-                <div fxLayout="column">
-                    <div class="work-title detail-item">
-                        <div fxLayout="row" fxLayoutAlign="start center">
-                            <mat-icon
-                                aria-label="Work title"
-                                svgIcon="as_work"></mat-icon> <span>{{job.title}}</span>
+    class="wrapper">
+    <div
+        fxLayout="column"
+        fxLayoutAlign="start stretch"
+        *ngIf="job">
+        <as-profile-template [image]="job.photo" >
+            <as-profile-title>
+                <span class="last-name">{{job.company}}</span>
+            </as-profile-title>
+            <as-profile-details>
+                <div class="detail-items" fxLayout="row" fxLayout="space-between center">
+                    <div fxLayout="column">
+                        <div class="work-title detail-item">
+                            <div fxLayout="row" fxLayoutAlign="start center">
+                                <mat-icon
+                                    aria-label="Work title"
+                                    svgIcon="as_work"></mat-icon> <span>{{job.title}}</span>
+                            </div>
+                        </div>
+                        <div class="location detail-item">
+                            <div fxLayout="row" fxLayoutAlign="start center">
+                                <mat-icon
+                                    aria-label="Location"
+                                    svgIcon="as_location"></mat-icon> <span>{{job.location}}</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="location detail-item">
-                        <div fxLayout="row" fxLayoutAlign="start center">
-                            <mat-icon
-                                aria-label="Location"
-                                svgIcon="as_location"></mat-icon> <span>{{job.location}}</span>
+                    <div fxLayout="column">
+                        <div class="place-of-birth detail-item">
+                            <div fxLayout="row" fxLayoutAlign="start center">
+                                <mat-icon
+                                    aria-label="Place of birth"
+                                    svgIcon="as_place_of_birth"></mat-icon> <a href="{{job.website}}">{{job.website}}</a>
+                            </div>
+                        </div>
+                        <div class="birthday detail-item">
+                            <div fxLayout="row" fxLayoutAlign="start center">
+                                <mat-icon
+                                    aria-label="Birthday"
+                                    svgIcon="as_birthday"></mat-icon>
+                                    <span>{{job.startDate | date:'shortDate'}}</span> &ndash;
+                                    <span>{{job.endDate | date:'shortDate'}}</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div fxLayout="column">
-                    <div class="place-of-birth detail-item">
-                        <div fxLayout="row" fxLayoutAlign="start center">
-                            <mat-icon
-                                aria-label="Place of birth"
-                                svgIcon="as_place_of_birth"></mat-icon> <a href="{{job.website}}">{{job.website}}</a>
-                        </div>
-                    </div>
-                    <div class="birthday detail-item">
-                        <div fxLayout="row" fxLayoutAlign="start center">
-                            <mat-icon
-                                aria-label="Birthday"
-                                svgIcon="as_birthday"></mat-icon>
-                                <span>{{job.startDate | date:'shortDate'}}</span> &ndash;
-                                <span>{{job.endDate | date:'shortDate'}}</span>
-                        </div>
-                    </div>
+            </as-profile-details>
+        </as-profile-template>
+        <as-profile-box heading="Responsibilities">
+            <ul>
+                <li
+                    *ngFor="let task of job.tasks">
+                    {{ task }}
+                </li>
+            </ul>
+        </as-profile-box>
+        <as-profile-box heading="Tools">
+            <div class="tools-container" fxLayout="row">
+                <div
+                    *ngFor="let tool of job.tools"
+                    class="tool">
+                    {{ tool }}
                 </div>
             </div>
-        </as-profile-details>
-    </as-profile-template>
-    <as-profile-box heading="Summary">
-        <p>Lorem ipsum dolor sit amet, impetus definiebas at ius, odio movet quo ut.
-            Mel unum debet alterum ad, verear delicata per id, in vero tritani persecuti eam.
-            Ut nec eius audiam consectetuer, sea zril nemore cu. Utinam accusam et sed.
-            Legere omnium definiebas vim ex. Est ei aliquip scripta persequeris,
-            nihil convenire sea ei, ne error inciderint sadipscing quo. At case mnesarchum per.
-        </p>
-        <p>
-            Sale salutandi accommodare ne pro. In eam probo posse utamur. His te noster ponderum.
-            Mei ad perfecto ocurreret corrumpit, ius idque dicit sonet in. Lorem graece fabulas ad vel,
-            at deleniti partiendo expetenda has, ne possim constituam usu. Nam aperiri legendos te.
-        </p>
-    </as-profile-box>
-    <as-profile-box heading="Skills">
-        <div class="technical-skills" fxLayout="row">
-            <div
-                *ngFor="let task of job.responsibilities"
-                class="skill">
-                {{ task }}
-            </div>
-        </div>
-    </as-profile-box>
+        </as-profile-box>
+    </div>
 </div>
