--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
             <a
                 [routerLink]="['profile']"
                 routerLinkActive="active"
-                [routerLinkActiveOptions]="{exact: true}">Profile</a>
+                [routerLinkActiveOptions]="{exact: true}">Myself</a>
         </li>
         <li *ngFor="let job of jobs()">
             <a
